<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegEx Generator</string>
    <string name="action_about">About</string>
    <string name="title_section1">Starts with</string>
    <string name="title_section2">Contains</string>
    <string name="title_section3">Ends with</string>
    <string name="startsWithText">exact text&#8230;</string>
    <string name="startsWithButton">done</string>
    <string name="anything">anything</string>
    <string name="upper_letter">uppercase letter</string>
    <string name="lower_letter">lowercase letter</string>
    <string name="number">number</string>
    <string name="symbol">symbol</string>
    <string name="containsText">contains&#8230;</string>
    <string name="notContainsText">doesn\'t contain&#8230;</string>
    <string name="OR">or:</string>
    <string name="but">but:</string>
    <string name="endsText">ends with&#8230;</string>
    <string name="notEndsWithText">doesn\'t end with&#8230;</string>
    <string name="empty"></string>
    <string name="swipe">swipe for next</string>
    <string name="regexLabel">Regular Expression:</string>
    <string name="regexText">.*</string>
    <string name="regex_cheat_sheet">Show me the cheat sheet</string>
    <string name="shareButton">Share this</string>
    <string name="share_regex_to">Share regex to</string>
    <string name="about_message">The app\'s philosophy is to help with hard to memorize regular expression rules. It provides a graphical tool to make the generation just a bit easier. I hope you make good use of it!\n\nPlease feel free to email me (Google Play), any feedback is much appreciated!\n\nThanks!\n\ntakoli</string>
    <string name="got_it">Cool</string>
    <string name="title_activity_display_cheat_sheet">DisplayCheatSheetActivity</string>
    <string name="action_settings">Settings</string>
    <string name="back_to_gen">Got it, thanks</string>
    <string name="cheat_sheet_title">Regular Expression Cheat Sheet</string>
    <string name="character_classes">Character Classes:</string>
    <string name="char_class_rules">\\s\u0020\u0020Whitespace\n\\S\u0020\u0020Not whitespace\n\\d\u0020\u0020Digit\n\\D\u0020\u0020Not digit\n\\w\u0020\u0020Word\n\\W\u0020\u0020Not word\n\\c\u0020\u0020Control character</string>
    <string name="quantifiers">Quantifiers:</string>
    <string name="quant_rules">*\u0020\u00200 or more\n+\u0020\u00201 or more\n?\u0020\u00200 or 1\n{3}\u0020\u0020Exactly 3\n{3,}\u0020\u00203 or more\n{3,5}\u0020\u00203, 4 or 5</string>
    <string name="anchors">Anchors:</string>
    <string name="anch_rules">^\u0020\u0020Start of string or line\n$\u0020\u0020End of string or line\n\\&lt;\u0020\u0020Start of word\n\\&gt;\u0020\u0020End of word\n\\A\u0020\u0020Start of string\n\\Z\u0020\u0020End of string\n\\b\u0020\u0020Word boundary\n\\B\u0020\u0020Not word boundary</string>
    <string name="groups_and_ranges">Groups and Ranges:</string>
    <string name="group_rang_rules">.\u0020\u0020Any character\n[abc]\u0020\u0020Range (a or b or c)\n[^abc]\u0020\u0020Not a or b or c\n[a&#8211;q]\u0020\u0020\u0020\u0020Letter from a to q\n[A&#8211;E]\u0020\u0020\u0020\u0020Upper case from A to E\n[0&#8211;5]\u0020\u0020\u0020\u0020Digit from 0 to 5\n?!\u0020\u0020\u0020\u0020Negative lookahead\n(&#8230;)\u0020\u0020\u0020\u0020Group\n(a|b)\u0020\u0020\u0020\u0020Alternation a or b</string>
    <string name="special_groups_and_characters">Special groups and characters:</string>
    <string name="spec_gr_rules">[:lower:]\u0020\u0020\u0020\u0020Lower case letters\n[:upper:]\u0020\u0020\u0020\u0020Upper case letters\n[:alpha:]\u0020\u0020\u0020\u0020All letters\n[:alnum:]\u0020\u0020\u0020\u0020Digits and letters\n[:digit:]\u0020\u0020\u0020\u0020Digits\n[:word:]\u0020\u0020\u0020\u0020Digits, letters and underscore\n[:print:]\u0020\u0020\u0020\u0020Printed characters and spaces\n[:space:]\u0020\u0020\u0020\u0020Blank characters\n[:print:]\u0020\u0020\u0020\u0020Printed characters and spaces\n[:punct:]\u0020\u0020\u0020\u0020Punctu­ation\n[:cntrl:]\u0020\u0020\u0020\u0020Control characters\n[:graph:]\u0020\u0020\u0020\u0020Printed characters\n\\n\u0020\u0020\u0020\u0020New line\n\\r\u0020\u0020\u0020\u0020Carriage return\n\\t\u0020\u0020\u0020\u0020Tab</string>
    <string name="metacharacters_escaped_by">Metacharacters - escaped with "\\":</string>
    <string name="meta_rules">^\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020[\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020.\n$\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020{\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020*\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\n(\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\\\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020+\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\n)\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020|\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020?\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\n&lt;\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020&gt;</string>
    <string name="screen_props">screen props</string>  

</resources>
