<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context=".MainActivity$DummySectionFragment" >

    <RelativeLayout
	    android:layout_weight="1"
	    android:layout_width="0dp"
	    android:layout_height="match_parent">
	    
	    <!-- TEXT on the side-->    
		<TextView
		    style="@style/SideText"
		    android:id="@+id/sideText2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    android:singleLine="true"
		    android:rotation="-90"
		    android:text="@string/title_section2"
		    android:textStyle="italic"
		    android:textColor="#36b8e8"
	   		android:onClick="regCFlisteners" />
		
    </RelativeLayout>
    
    <RelativeLayout
        style="@style/SelectorLayout"
	    android:layout_weight="2"
	    android:layout_width="0dp"
	    android:layout_height="match_parent" >
		
        <CheckBox
            style="@style/CheckBoxText"
	        android:id="@+id/contAnything"
	        android:text="@string/anything"
	        android:checked="true"
	        android:onClick="onCFCheckboxClicked" />
        
        <CheckBox
            style="@style/CheckBoxText"
	        android:id="@+id/containsText1CheckBox"
			android:layout_below="@id/contAnything"
	        android:text="@string/empty"
	        android:onClick="onCFCheckboxClicked" />
		
	        <EditText
	            style="@style/InputText"
		        android:id="@+id/containsText1"
		        android:layout_toRightOf="@id/containsText1CheckBox"
		        android:layout_alignBaseline="@id/containsText1CheckBox"
		        android:paddingBottom="5dp"
		        android:hint="@string/containsText"
		        android:onClick="regCFlisteners" />
        
	    <CheckBox
	        style="@style/CheckBoxText"
	        android:id="@+id/containsText2CheckBox"
			android:layout_below="@id/containsText1CheckBox"
	        android:text="@string/OR"
	        android:onClick="onCFCheckboxClicked" />
        
	        <EditText
	            style="@style/InputText"
		        android:id="@+id/containsText2"
		        android:layout_toRightOf="@id/containsText2CheckBox"
		        android:layout_alignBaseline="@id/containsText2CheckBox"
		        android:paddingBottom="5dp"
		        android:hint="@string/containsText"
		        android:onClick="regCFlisteners"  />
	        
	    <CheckBox
	        style="@style/CheckBoxText"
	        android:id="@+id/containsText3CheckBox"
			android:layout_below="@id/containsText2CheckBox"
	        android:text="@string/OR"
	        android:onClick="onCFCheckboxClicked" />
        
	        <EditText
	            style="@style/InputText"
		        android:id="@+id/containsText3"
		        android:layout_toRightOf="@id/containsText3CheckBox"
		        android:layout_alignBaseline="@id/containsText3CheckBox"
		        android:paddingBottom="5dp"
		        android:hint="@string/containsText"
		        android:onClick="regCFlisteners"  />
	        
	    <!-- doesnt contain -->
	    <CheckBox
	        style="@style/CheckBoxText"
	        android:id="@+id/notContainsTextCheckBox"
			android:layout_below="@id/containsText3CheckBox"
			android:layout_marginTop="18dp"
	        android:text="@string/but"
	        android:onClick="onCFCheckboxClicked" />
        
	        <EditText
	            style="@style/InputText"
		        android:id="@+id/notContainsText"
		        android:layout_toRightOf="@id/notContainsTextCheckBox"
		        android:layout_alignBaseline="@id/notContainsTextCheckBox"
		        android:paddingBottom="5dp"
		        android:hint="@string/notContainsText"
		        android:onClick="regCFlisteners"  />
        
		<!-- swipe -->    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"	>	
		    <TextView
		        android:id="@+id/swipe2"
		        android:layout_width="0dp"
		        android:layout_height="26dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/swipe"
		        android:textSize="13sp"
		        android:textStyle="italic"
		        android:textColor="#33b5e5" />
			<TextView 
			    android:layout_width="0dp"
			    android:layout_height="20dp"
			    android:layout_weight="1" />
		</LinearLayout>
    </RelativeLayout>
</LinearLayout>
