<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:context=".DisplayCheatSheetActivity" >

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager"
        android:layout_weight="4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#fff"
        app:context=".MainRegexGen" >

        <android.support.v4.view.PagerTitleStrip
            style="@style/TitleStrip"
            android:id="@+id/pager_title_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#33b5e5"
            android:textColor="#FFF" >
        </android.support.v4.view.PagerTitleStrip>
        
    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:id="@+id/main_innerlayout"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:padding="15dp"
        android:background="#6633b5e5" >
	    
        <TextView
            style="@style/RegexLabel"
	        android:id="@+id/regexLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/regexLabel"
	        android:textColor="#FFF" />
	    
	    <TextView
	        style="@style/RegexText"
	        android:id="@+id/regexText"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/regexLabel"
	        android:padding="4dp"
	        android:text="@string/regexText"
	        android:textStyle="bold"
	        android:textColor="#666" 
	        android:gravity="center"
	        android:textIsSelectable="true"
	        android:background="@drawable/regex_field" />
	    
	    <Button
	        style="@style/ShareRegex"
	        android:id="@+id/shareButton"
	        android:layout_width="wrap_content"
	        android:layout_height="30dp"
	        android:layout_below="@+id/regexText"
	        android:layout_centerHorizontal="true"
	        android:text="@string/shareButton"
	        android:textColor="#FFF" 
	        android:drawableLeft="@drawable/ic_menu_share"
	        android:onClick="onShareClick"
	        android:background="@drawable/button_shape" />

	    <Button
	        style="@style/CheatButton"
	        android:id="@+id/cheatSheet"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:text="@string/regex_cheat_sheet" 
	        android:textColor="#FFF" 
	        android:onClick="showCheatSheet"
	        android:background="@drawable/button_shape" />
            
    </RelativeLayout>
</LinearLayout>

<!-- title:20; padding: 15; label:18; regex:22; sharebutton:15 
 -->